--- a/privacy.html
+++ b/privacy.html
@@ -41,7 +41,7 @@
 
   <h2>6. Developer Contact</h2>
   <p>If you have any questions, contact:<br>
-  <a href="mailto:josipadesign.contact@gmail.com">josipadesign.contact@gmail.com</a></p>
+  <a href="mailto:jozrilic@gmail.com">jozrilic@gmail.com</a></p>
 
   <footer>© 2025 Josipa Design — QR Generator</footer>
 </main>
